noinst_LIBRARIES = libbase.a
libbase_a_SOURCES = config.cpp console.hpp news_constants.hpp newsgrouppost.cpp nntpserver.hpp post_set.cpp \
					stringpattern.cpp strutil.hpp config.hpp newsgroup.cpp newsgrouppost.hpp \
					post_file.cpp post_set.hpp stringpattern.hpp tcpconnection.cpp console.cpp keydefs.hpp \
					newsgroup.hpp nntpserver.cpp post_file.hpp SDL_types.h strutil.cpp tcpconnection.hpp \
                    messageheader.cpp messageheader.hpp post_set_splitter.cpp post_set_splitter.hpp \
                    post_set_splitter_staticmatch.cpp post_set_splitter_staticmatch.hpp \
                    post_set_splitter_dynamicmatch.cpp post_set_splitter_dynamicmatch.hpp
AM_CXXFLAGS = -Wall -D_REENTRANT -I../jobs -I../screens

