noinst_LIBRARIES = libbase.a
libbase_a_SOURCES = config.cpp news_constants.hpp newsgrouppost.cpp nntpserver.hpp post_set.cpp \
					stringpattern.cpp strutil.hpp config.hpp newsgroup.cpp newsgrouppost.hpp \
					post_file.cpp post_set.hpp stringpattern.hpp keydefs.hpp \
					newsgroup.hpp nntpserver.cpp post_file.hpp strutil.cpp \
                    messageheader.cpp messageheader.hpp post_set_splitter.cpp post_set_splitter.hpp \
                    post_set_splitter_dynamicmatch.cpp post_set_splitter_dynamicmatch.hpp \
                    file_handle.cpp file_handle.hpp
AM_CXXFLAGS = -Wall -D_REENTRANT -I../netutils -I../jobs -I../screens

