noinst_LIBRARIES = libbase.a
libbase_a_SOURCES = config.cpp news_constants.hpp newsgrouppost.cpp nntpserver.hpp post_set.cpp \
					config.hpp newsgroup.cpp newsgrouppost.hpp \
					post_file.cpp post_set.hpp keydefs.hpp \
					newsgroup.hpp nntpserver.cpp post_file.hpp \
                    messageheader.cpp messageheader.hpp post_set_splitter.cpp post_set_splitter.hpp \
                    post_set_splitter_dynamicmatch.cpp post_set_splitter_dynamicmatch.hpp \
					database.cpp database.hpp filepiece.cpp filepiece.hpp

AM_CXXFLAGS = -Wall -D_REENTRANT -I../utils -I../netutils -I../jobs -I../screens -I../par2

