noinst_LIBRARIES = libjobs.a
libjobs_a_SOURCES = headersforgroupjob.cpp headersforgroupjob.hpp xoverjob.cpp xoverjob.hpp job.cpp job.hpp \
	       	    jobqueue.cpp jobqueue.hpp postsetjob.cpp postsetjob.hpp bodyretrieverjob.cpp bodyretrieverjob.hpp \
				subjectfileloaderjob.cpp  subjectfileloaderjob.hpp  

AM_CXXFLAGS = -Wall -D_REENTRANT -I../base -I../screens -I../decoders

