noinst_LIBRARIES = libjobs.a
libjobs_a_SOURCES = headersforgroupjob.cpp headersforgroupjob.hpp job.cpp job.hpp \
	       	    jobqueue.cpp jobqueue.hpp postsetjob.cpp postsetjob.hpp bodyretrieverjob.cpp bodyretrieverjob.hpp \
				subjectfileloaderjob.cpp  subjectfileloaderjob.hpp newsgrouplistretrieverjob.cpp newsgrouplistretrieverjob.hpp \
                netjob.hpp netjob.cpp decoder.cpp decoder.hpp uu_decoder.cpp uu_decoder.hpp yenc_decoder.cpp yenc_decoder.hpp \
				netcentral.cpp netcentral.hpp postfilejob.cpp postfilejob.hpp groupupdater.cpp groupupdater.hpp \
				jobparent.cpp jobparent.hpp decoderfactory.cpp decoderfactory.hpp

AM_CXXFLAGS = -Wall -D_REENTRANT -I../utils -I ../netutils -I../base -I../screens -I../par2

