noinst_LIBRARIES = libnetutils.a

libnetutils_a_SOURCES = tcpconnection.cpp tcpconnection.hpp webserver.cpp webserver.hpp \
						SDL_types.h tcplistener.cpp tcplistener.hpp webrequest.cpp webrequest.hpp \
						webdatafetcher.cpp webdatafetcher.hpp webfilefetcher.cpp webfilefetcher.hpp \
						console.cpp console.hpp

AM_CXXFLAGS = -Wall -D_REENTRANT -I../jobs -I../screens

