noinst_LIBRARIES = libscreens.a
libscreens_a_SOURCES = newsgrouplistscreen.cpp postsetdetailscreen.cpp postsetlistscreen.cpp \
 					   screen.cpp session.cpp widget.cpp newsgrouplistscreen.hpp postsetdetailscreen.hpp \
					   postsetlistscreen.hpp screen.hpp session.hpp widget.hpp scrollablelist.hpp \
                       shutdownscreen.cpp shutdownscreen.hpp activejobsscreen.cpp activejobsscreen.hpp \
					   activenetjobsscreen.cpp activenetjobsscreen.hpp textviewerscreen.cpp textviewerscreen.hpp
AM_CXXFLAGS = -Wall -D_REENTRANT -I../base -I../jobs

